WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
309620
REGRESSION (
308037@main
): fast/ruby/ruby-expansion-cjk-4.html is a consistent image failure
https://bugs.webkit.org/show_bug.cgi?id=309620
Summary
REGRESSION (308037@main): fast/ruby/ruby-expansion-cjk-4.html is a consistent...
alan
Reported
2026-03-10 17:13:47 PDT
ssia
Attachments
[fast-cq]Patch
(993 bytes, patch)
2026-03-10 17:17 PDT
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2026-03-10 17:17:21 PDT
Created
attachment 478623
[details]
[fast-cq]Patch
EWS
Comment 2
2026-03-11 05:20:21 PDT
Committed
309051@main
(feb808854d9f): <
https://commits.webkit.org/309051@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 478623
[details]
.
alan
Comment 3
2026-03-11 05:20:39 PDT
<
rdar://172107254
>
pascoe@apple.com
Comment 4
2026-03-13 10:22:15 PDT
Re-opening for pull request
https://github.com/WebKit/WebKit/pull/60570
pascoe@apple.com
Comment 5
2026-03-13 10:51:05 PDT
Ignore above comment.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug