[DRAFT] REGRESSION(308037@main): fast/ruby/ruby-expansion-cjk-4.html is a consistent image failure on CheerE+ https://bugs.webkit.org/show_bug.cgi?id=309620 rdar://172107254

Reviewed by NOBODY (OOPS!).

Commit 308037@main introduced glyph overflow tracking in
computeInlineTextItemWidthsAndTextSpacing() but stored raw glyph bounds
instead of overflow deltas (extent beyond font metrics). The consumer
(InlineDisplayContentBuilder::appendTextDisplayBox) expects delta values and
uses them to inflate ink overflow, causing massive over-inflation (~32px for
a 40px font) for text using fallback fonts in bidi-reordering content.

Add the same raw-to-delta conversion that already exists in
nonWhitespaceContentWidth(), which correctly subtracts the font's
ascent/descent from the raw glyph bounds before storing.

* Source/WebCore/layout/formattingContexts/inline/InlineItemsBuilder.cpp:
(WebCore::Layout::InlineItemsBuilder::computeInlineTextItemWidthsAndTextSpacing):